--- a/.isort.cfg
+++ b/.isort.cfg
@@ -7,6 +7,7 @@ force_single_line = true
 
 known_enavigation = enavigation
 known_pytest = pytest
+known_sortedcontainers = sortedcontainers
 
 sections =
     FUTURE
@@ -14,6 +15,7 @@ sections =
     FIRSTPARTY
     ENAVIGATION
     PYTEST
+	SORTEDCONTAINERS
     STDLIB
     THIRDPARTY
 
@@ -22,4 +24,5 @@ import_heading_localfolder = enavigation
 import_heading_firstparty = enavigation
 import_heading_enavigation = enavigation
 import_heading_pytest = pytest
+import_heading_sortedcontainers = sortedcontainers
 import_heading_stdlib = python
