--- a/.mypy.ini
+++ b/.mypy.ini
@@ -10,3 +10,6 @@ warn_no_return = true
 warn_return_any = true
 warn_unreachable = true
 implicit_reexport = false
+
+[mypy-sortedcontainers.*]
+ignore_missing_imports = True
