--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Erik Soma <stillusingirc@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.12"
 sortedcontainers = "^2.0.0"
+egeometry = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.4.3"
