--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,11 +32,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
         architecture: ${{ matrix.python-arch }}
 
-    - name: Install icu4c
-      if: runner.os == 'macOS'
-      run: |
-        brew install icu4c
-
     - name: Install Poetry
       uses: snok/install-poetry@v1
 
@@ -46,7 +41,7 @@ jobs:
 
     - name: Test
       run: |
-        poetry run pytest --cov=etypography --cov-report=xml
+        poetry run pytest --cov=enavigation --cov-report=xml
 
     - name: Codecov
       uses: codecov/codecov-action@v2
